scripts/nullaway/annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8.txt
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRS.java:74: error: [NullAway] passing @Nullable parameter 'end' where @NonNull is required
			CRSOperations.createReservation(db, customer, branch, vehicleGroup, start, end);
			                                                                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:131: error: [NullAway] dereferenced expression startDate is @Nullable
		if(b==null || pc==null || startDate.after(endDate) )
		                                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:132: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:143: error: [NullAway] dereferenced expression endDate is @Nullable
						if(r.getStartDate().getTime() <= endDate.getTime() && startDate.getTime() <= r.getEndDate().getTime())
						                                        ^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:160: error: [NullAway] dereferenced expression startDate is @Nullable
		if(c==null || b==null || vg==null || startDate.after(endDate) )
		                                              ^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/CRSOperations.java:201: error: [NullAway] dereferenced expression selectedVehicle is @Nullable
			System.out.println(c.toString()+"just rent:\n"+selectedVehicle.toString()+":\n"+r.toString()+"\n");
			                                                              ^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/Branch.java:51: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return openingTime;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/Branch.java:60: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return closingTime;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/Branch.java:127: error: [NullAway] dereferenced expression openingTime is @Nullable
				"From " + openingTime.toString() + " to " + closingTime.toString() + "\n" +
				                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/Branch.java:127: error: [NullAway] dereferenced expression closingTime is @Nullable
				"From " + openingTime.toString() + " to " + closingTime.toString() + "\n" +
				                                                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/VehicleGroup.java:60: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return model;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/Rental.java:19: error: [NullAway] initializer method does not guarantee @NonNull fields startDate (line 11), endDate (line 12) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Rental(Date start, Date end, @Nullable Vehicle v, @Nullable Customer c) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/Rental.java:39: error: [NullAway] unboxing of a @Nullable value
		return startKm;
		       ^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/Rental.java:45: error: [NullAway] unboxing of a @Nullable value
		return endKm;
		       ^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/test/PersonTest.java:85: error: [NullAway] dereferenced expression e.getCause() is @Nullable
			exceptionMessage = e.getCause().getMessage();
			                               ^
    (see http://t.uber.com/nullaway )
../annotator/urlc1c8a2efc1_wydler_mdbt_tgz-pJ8-de_hrw_mdbt_CRSJ8/src/de/hrw/mdbt/model/test/PersonTest.java:100: error: [NullAway] dereferenced expression e.getCause() is @Nullable
			exceptionMessage = e.getCause().getMessage();
			                               ^
    (see http://t.uber.com/nullaway )
16 errors
